better user experience

--- a/css/style.css
+++ b/css/style.css
@@ -16,3 +16,21 @@
 .answer:hover{
 	cursor: pointer;
 }
+
+.img-answer{
+	cursor: pointer;
+	height: 350px;
+	width: 100%;
+	overflow: hidden;
+	border-radius: 10px;
+	margin-bottom: 20px;
+}
+
+.img-answer img{
+	width: 100%;
+	height: auto;
+}
+
+.img-selected{
+	border: 3px solid #65afdc;
+}
